examples/invalid/67_non_unit_sequential_expression.lane
// invalid: a non-final sequential expression must have type Unit
module Examples.Invalid67

pub fn bad() -> Int {
  1
  2
}
